# tga-shortage-scraper

./: CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml
tests/: test_click.py
tga_shortage_scraper/: __init__.py  __main__.py
