[project]
name = "tga-shortage-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "types-requests>=2.32.4.20250611",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"