[project]
name = "tga-shortage-scraper"
version = "0.1.2"
description = "Scrape the TGA shortage database for ARTG entries."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.2.1", "pydantic>=2.11.7", "requests>=2.32.4"]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "types-requests>=2.32.4.20250611",
]

[project.scripts]
tga-shortage-scraper = "tga_shortage_scraper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
